# yagpt-tg

./: .env.dist  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml
yagpttg/: Yandextoken.py  __init__.py  __main__.py  api.py  bot.py  cache.py  config.py  db.py  key.json  keyboards.py  messages.py
yagpttg/handlers/: __init__.py  gpt.py  greeting.py
