[tool.poetry]
name = "yagpttg"
version = "0.1.0"
description = "YandexGPT in your Telegram chats!"
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.15.0"
loguru = "^0.7.3"
tortoise-orm = "^0.22.2"
asyncpg = "^0.30.0"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
