[tool.poetry]
name = "yagpttg"
version = "0.1.0"
description = "YandexGPT in your Telegram chats!"
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.16.0"
loguru = "^0.7.3"
tortoise-orm = "^0.23.0"
asyncpg = "^0.30.0"
aioredis = "^2.0.1"
pydantic-settings = "^2.7.1"
redis = "^5.2.1"
aiohttp = "^3.11.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "D", "UP", "ANN"]
ignore = ["D107", "D212", "D213", "D203", "D413"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
